# zremote

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE.md  flake.nix  tsconfig.json
crates/myremote-agent/: Cargo.toml
crates/myremote-agent/src/: config.rs  connection.rs  main.rs  pty.rs  session.rs  tmux.rs
crates/myremote-agent/src/agentic/: claude_code.rs  detector.rs  manager.rs  mod.rs  types.rs
crates/myremote-agent/src/claude/: mod.rs
crates/myremote-agent/src/hooks/: handler.rs  installer.rs  mapper.rs  metrics.rs  permission.rs  server.rs  transcript.rs
crates/myremote-agent/src/knowledge/: client.rs  config.rs  mod.rs  process.rs
crates/myremote-agent/src/local/: mod.rs  state.rs  static_files.rs
crates/myremote-agent/src/mcp/: mod.rs  tools.rs
crates/myremote-agent/src/project/: git.rs  mod.rs  scanner.rs
crates/myremote-server/: Cargo.toml
crates/myremote-server/migrations/: 004_analytics.sql  010_claude_sessions.sql
crates/myremote-server/src/: auth.rs  db.rs  error.rs  main.rs  state.rs
crates/myremote-server/src/routes/: agentic.rs  agents.rs  analytics.rs  claude_sessions.rs  config.rs  events.rs  health.rs  hosts.rs  knowledge.rs  mod.rs  permissions.rs  projects.rs  search.rs  sessions.rs  terminal.rs
crates/myremote-server/src/telegram/: callbacks.rs  commands.rs  format.rs  mod.rs  notifications.rs
crates/zremote/: Cargo.toml
crates/zremote-agent/: Cargo.toml  build.rs
crates/zremote-agent/src/: clipboard.rs  config.rs  connection.rs  enroll.rs  fingerprint.rs  lib.rs  main.rs  pty.rs  session.rs  shell.rs  tmux.rs
crates/zremote-agent/src/admin/: mod.rs
crates/zremote-agent/src/agentic/: analyzer.rs  claude_code.rs  detector.rs  manager.rs  mod.rs  patterns.rs  types.rs
crates/zremote-agent/src/agents/: claude.rs  codex.rs  codex_rollout.rs  mod.rs  resume.rs
crates/zremote-agent/src/bridge/: handler.rs  mod.rs
crates/zremote-agent/src/ccline/: format.rs  input.rs  listener.rs  mod.rs  types.rs
crates/zremote-agent/src/channel/: bridge.rs  http.rs  jsonrpc.rs  mcp.rs  mod.rs  port.rs  tools.rs  types.rs
crates/zremote-agent/src/claude/: mod.rs
crates/zremote-agent/src/connection/: auth.rs  dispatch.rs  heartbeat.rs  mod.rs  registration.rs
crates/zremote-agent/src/daemon/: discovery.rs  mod.rs  protocol.rs  session.rs
crates/zremote-agent/src/hooks/: channel.rs  context.rs  handler.rs  installer.rs  mapper.rs  metrics.rs  mod.rs  permission.rs  server.rs  transcript.rs
crates/zremote-agent/src/knowledge/: client.rs  config.rs  context_delivery.rs  file_watcher.rs  mod.rs  process.rs
crates/zremote-agent/src/linear/: client.rs  types.rs
crates/zremote-agent/src/local/: auth_mw.rs  mod.rs  router.rs  state.rs  static_files.rs  tasks.rs  token.rs
crates/zremote-agent/src/mcp/: mod.rs  tools.rs
crates/zremote-agent/src/project/: action_inputs.rs  action_runner.rs  actions.rs  configure.rs  diff.rs  diff_parser.rs  git.rs  git_refresh.rs  hook_dispatcher.rs  hooks.rs  intelligence.rs  metadata.rs  mod.rs  prompts.rs  repair.rs  review.rs  scanner.rs  settings.rs
crates/zremote-agent/src/pty/: mod.rs  shell_integration.rs
crates/zremote-agent/src/worktree/: mod.rs  service.rs
crates/zremote-agent/tests/: review_integration.rs
crates/zremote-ccline/: Cargo.toml
crates/zremote-ccline/src/: format.rs  input.rs  main.rs  socket.rs
crates/zremote-cli/: Cargo.toml  commander-reference.md
crates/zremote-cli/src/: connection.rs  lib.rs  terminal.rs
crates/zremote-cli/src/commands/: action.rs  channel.rs  commander.rs  config.rs  events.rs  host.rs  knowledge.rs  loop_cmd.rs  memory.rs  mod.rs  project.rs  session.rs  settings.rs  status.rs  task.rs  worktree.rs
crates/zremote-cli/src/format/: json.rs  llm.rs  mod.rs  plain.rs  table.rs
crates/zremote-client/: Cargo.toml
crates/zremote-client/src/: client.rs  diff.rs  error.rs  events.rs  lib.rs  terminal.rs  types.rs
crates/zremote-client/tests/: client.rs  terminal.rs  types_serde.rs
crates/zremote-core/: Cargo.toml
crates/zremote-core/migrations/: 003_projects.sql  008_knowledge_lifecycle.sql  009_git.sql  011_persistent_sessions.sql  012_agentic_context.sql  013_task_name.sql  014_has_zremote_config.sql  015_project_pinned.sql  016_simplify_agentic.sql  017_session_context.sql  018_drop_tmux_name.sql  019_loop_metrics.sql  020_project_intelligence.sql  021_execution_nodes.sql  022_permission_policies.sql  023_task_error_message.sql  024_agent_profiles.sql  025_task_disconnect_reason.sql  026_auth.sql  026_execution_node_status.sql  027_agents_public_key.sql  027_codex_agent_profile.sql  028_codex_profile_presets.sql  029_agent_session_ref.sql
crates/zremote-core/src/: configure.rs  db.rs  error.rs  events_ws.rs  lib.rs  request_id.rs  snapshot_parser.rs  state.rs  terminal_ws.rs  validation.rs  worktree_http.rs
crates/zremote-core/src/processing/: agentic.rs  mod.rs  terminal.rs
crates/zremote-core/src/queries/: admin_config.rs  agent_profiles.rs  agents.rs  analytics.rs  audit.rs  auth_sessions.rs  claude_sessions.rs  (+11 more)
crates/zremote-ffi/: Cargo.toml  uniffi.toml
crates/zremote-ffi/src/: client.rs  error.rs  events.rs  lib.rs  terminal.rs  types.rs
crates/zremote-gui/: Cargo.toml
crates/zremote-gui/src/: api.rs  app_state.rs  assets.rs  auth_state.rs  events_ws.rs  icons.rs  lib.rs  local.rs  main.rs  notifications.rs  persistence.rs  terminal_direct.rs  terminal_handle.rs  terminal_ws.rs  test_introspection.rs  test_server.rs  theme.rs  types.rs
crates/zremote-gui/tests/: review_pure.rs
crates/zremote-protocol/: Cargo.toml
crates/zremote-protocol/src/: agentic.rs  agents.rs  auth.rs  channel.rs  claude.rs  events.rs  fs.rs  lib.rs  project.rs  status.rs  terminal.rs
crates/zremote-server/: Cargo.toml
crates/zremote-server/migrations/: 005_session_project.sql  006_knowledge.sql
crates/zremote-server/public/: enroll.sh
crates/zremote-server/src/: auth.rs  auth_mw.rs  db.rs  diff_dispatch.rs  error.rs  lib.rs  main.rs  rate_limit.rs  state.rs  static_files.rs
crates/zremote/src/: main.rs
(+574 files in other folders)
