[package]
name = "myremote-agent"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
myremote-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
