[package]
name = "myremote-agent"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
myremote-protocol.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
hostname.workspace = true
url.workspace = true
rand.workspace = true
chrono.workspace = true
portable-pty.workspace = true
