[package]
name = "myremote-server"
version = "0.1.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
myremote-protocol.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
