[package]
name = "zremote-agent"
version = "0.2.2"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["local"]
local = ["dep:rust-embed", "dep:mime_guess", "dep:tower-http"]

[dependencies]
zremote-protocol.workspace = true
zremote-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
hostname.workspace = true
url.workspace = true
rand.workspace = true
chrono.workspace = true
portable-pty.workspace = true
sysinfo.workspace = true
reqwest.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
base64.workspace = true
glob-match = "0.2"
dirs = "6"
clap = { version = "4", features = ["derive"] }
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tower.workspace = true
