[package]
name = "zremote-agent"
version = "0.4.3"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["local"]
local = ["dep:tower-http"]

[dependencies]
zremote-protocol.workspace = true
zremote-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
hostname.workspace = true
url.workspace = true
rand.workspace = true
chrono.workspace = true
portable-pty.workspace = true
sysinfo.workspace = true
reqwest.workspace = true
axum.workspace = true
sqlx.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
base64.workspace = true
glob-match = "0.2"
dirs = "6"
arboard.workspace = true
png.workspace = true
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal", "process", "user"] }
tower-http = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
tower.workspace = true
