[package]
name = "zremote-cli"
version = "0.10.7"
edition.workspace = true

[lints]
workspace = true

[dependencies]
zremote-client.workspace = true
zremote-protocol.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util.workspace = true
comfy-table = "7"
chrono.workspace = true
