[package]
name = "zremote-client"
version = "0.14.5"
edition.workspace = true

[lints]
workspace = true

[dependencies]
zremote-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
url.workspace = true
flume.workspace = true
tracing.workspace = true
tokio-util.workspace = true
percent-encoding = "2"
base64.workspace = true
rand.workspace = true
zeroize.workspace = true

[dev-dependencies]
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
