[package]
name = "zremote-core"
version = "0.7.7"
edition.workspace = true

[lints]
workspace = true

[dependencies]
zremote-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx.workspace = true
axum = { workspace = true, features = ["ws"] }
dashmap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
base64.workspace = true

[dev-dependencies]
http-body-util = "0.1"
