[package]
name = "zremote-core"
version = "0.10.18"
edition.workspace = true

[lints]
workspace = true

[features]
default = []
axum = ["dep:axum"]

[dependencies]
zremote-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx.workspace = true
axum = { workspace = true, features = ["ws"], optional = true }
dashmap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
base64.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
