[package]
name = "zremote-ffi"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "zremote_ffi"

[lints]
workspace = true

[dependencies]
zremote-client.workspace = true
uniffi = { version = "0.29", features = ["cli"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-util.workspace = true
tracing.workspace = true
flume.workspace = true
serde_json.workspace = true
thiserror = "2"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
