[package]
name = "zremote-gui"
version = "0.10.0"
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
zremote-client.workspace = true

gpui.workspace = true
alacritty_terminal.workspace = true
flume.workspace = true
rust-embed.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
open = "5"
arboard.workspace = true
png.workspace = true
base64.workspace = true
notify-rust.workspace = true
