[package]
name = "zremote-gui"
version = "0.11.4"
edition.workspace = true

[lints]
workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
url.workspace = true
zremote-client.workspace = true

gpui.workspace = true
alacritty_terminal.workspace = true
flume.workspace = true
rust-embed.workspace = true
dirs = "6"
open = "5"
arboard.workspace = true
png.workspace = true
base64.workspace = true
notify-rust.workspace = true
