[package]
name = "zremote-protocol"
version = "0.14.5"
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
rand_core = { version = "0.6", features = ["getrandom"] }
