[package]
name = "zremote-server"
version = "0.11.10"
edition.workspace = true

[lints]
workspace = true

[dependencies]
zremote-protocol.workspace = true
zremote-core = { workspace = true, features = ["axum"] }
axum = { workspace = true, features = ["ws"] }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
sqlx.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
teloxide.workspace = true
base64.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { workspace = true, features = ["util"] }
