[package]
name = "zremote"
version = "0.9.1"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["gui", "agent", "cli"]
gui = ["dep:zremote-gui"]
agent = ["dep:zremote-agent"]
cli = ["dep:zremote-cli"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zremote-gui = { workspace = true, optional = true }
zremote-agent = { workspace = true, optional = true }
zremote-cli = { workspace = true, optional = true }
