[package]
name = "zremote"
version = "0.11.5"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["gui", "agent", "cli"]
gui = ["dep:zremote-gui"]
agent = ["dep:zremote-agent"]
cli = ["dep:zremote-cli"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
dotenvy = "0.15"
tracing.workspace = true
tracing-subscriber.workspace = true
zremote-gui = { workspace = true, optional = true }
zremote-agent = { workspace = true, optional = true }
zremote-cli = { workspace = true, optional = true }
