[package]
name = "zremote"
version = "0.13.0"
edition.workspace = true

[lints]
workspace = true

[features]
default = ["gui", "agent", "cli"]
gui = ["dep:zremote-gui", "dep:serde_json"]
agent = ["dep:zremote-agent"]
cli = ["dep:zremote-cli"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
dotenvy = "0.15"
serde_json = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
zremote-gui = { workspace = true, optional = true }
zremote-agent = { workspace = true, optional = true }
zremote-cli = { workspace = true, optional = true }
